Change monochrome color setup and further develop column layout.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,31 @@
   </div>
 </nav>
 <div class="row">
-  <div class="col-md-12 top_column">
-    <h1>Content Content</h1>
-    <p>
-      lots of text
+  <div class="col-md-12 top_column column_gradient all_column">
+    <h1 class="column_header">HeaderContent HeaderContent</h1>
+    <p class="column_text">
+      A large amount of text about stuff that happens and things that do too.
+      Probably crap about computers or something and introduction to the page.
     </p>
 
+  </div>
+  <div class="row">
+    <div class="col-md-6 column_gradient all_column">
+      <h1 class="column_header">HeaderContent HeaderContent</h1>
+      <p class="column_text">
+        A large amount of text about stuff that happens and things that do too.
+        Probably crap about computers or something and introduction to the page.
+      </p>
+
+    </div>
+    <div class="col-md-6 column_gradient all_column">
+      <h1 class="column_header">HeaderContent HeaderContent</h1>
+      <p class="column_text">
+        A large amount of text about stuff that happens and things that do too.
+        Probably crap about computers or something and introduction to the page.
+      </p>
+
+    </div>
   </div>
 
 </div>
