Finish initial styling on index page for use as template.

--- a/index.html
+++ b/index.html
@@ -30,32 +30,38 @@
     </ul>
   </div>
 </nav>
+<hr>
 <div class="row">
   <div class="col-md-12 top_column column_gradient all_column">
+    <hr>
     <h1 class="column_header">HeaderContent HeaderContent</h1>
     <p class="column_text">
       A large amount of text about stuff that happens and things that do too.
       Probably crap about computers or something and introduction to the page.
     </p>
-
+    <hr>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-md-6 column_gradient all_column">
+    <div class="col-md-6 column_gradient all_column sub_column">
+      <hr>
       <h1 class="column_header">HeaderContent HeaderContent</h1>
       <p class="column_text">
         A large amount of text about stuff that happens and things that do too.
         Probably crap about computers or something and introduction to the page.
       </p>
-
+      <hr>
     </div>
-    <div class="col-md-6 column_gradient all_column">
+    <div class="col-md-6 column_gradient all_column sub_column">
+      <hr>
       <h1 class="column_header">HeaderContent HeaderContent</h1>
       <p class="column_text">
         A large amount of text about stuff that happens and things that do too.
         Probably crap about computers or something and introduction to the page.
       </p>
-
+      <hr>
     </div>
+    <hr>
   </div>
 
 </div>
