Added some non offensive text shadow, created framework for all pages.

--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,18 @@
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <ul class="page_header">
-      <li><span class="left ">.colin_kingen {  </span></li>
-      <li><span class="left">web: development-design;</span></li>
-      <li><span class="left">  }</span></li>
+      <li><span class="left ">.colin_kingen {</span></li>
+      <li><span class="left">web: design</span></li>
+      <li><span class="left">}</span></li>
     </ul>
 
   <div class="container">
 
     <ul class="nav nav-tabs pull-right">
-      <li class="tab_style active"><a href="index.html">Home</a></li>
+      <li class="tab_style"><a href="index.html">Home</a></li>
       <li class="tab_style"><a href="about.html">About Me</a></li>
       <li class="tab_style"><a href="projects.html">Projects</a></li>
-      <li class="tab_style"><a href="contact.html">Contact</a></li>
+      <li class="tab_style active"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 </nav>
@@ -34,26 +34,35 @@
 <div class="row">
   <div class="col-md-12 top_column column_gradient all_column">
     <hr>
-    <br>
-    <h1 class="column_header top_header">Colin Kingen is a web development and design
-      student in Portland Oregon.
-    </h1>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <h1 class="column_header">HeaderContent HeaderContent</h1>
     <p class="column_text">
-      My goal is to use my skills as an coder, artist and problem solver make
-      the web a better place.
+      A large amount of text about stuff that happens and things that do too.
+      Probably crap about computers or something and introduction to the page.
     </p>
-    <br>
     <hr>
   </div>
   <hr>
-
+  <div class="row">
+    <div class="col-md-6 column_gradient all_column sub_column">
+      <hr>
+      <h1 class="column_header">HeaderContent HeaderContent</h1>
+      <p class="column_text">
+        A large amount of text about stuff that happens and things that do too.
+        Probably crap about computers or something and introduction to the page.
+      </p>
+      <hr>
+    </div>
+    <div class="col-md-6 column_gradient all_column sub_column">
+      <hr>
+      <h1 class="column_header">HeaderContent HeaderContent</h1>
+      <p class="column_text">
+        A large amount of text about stuff that happens and things that do too.
+        Probably crap about computers or something and introduction to the page.
+      </p>
+      <hr>
+    </div>
+    <hr>
+  </div>
 
 </div>
 
