Finish basic contact page and add CSS link styles.

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Arbitrary Name's Web Portfolio</title>
+  <title>Contact | Colin Kingen</title>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -34,31 +34,34 @@
 <div class="row">
   <div class="col-md-12 top_column column_gradient all_column">
     <hr>
-    <h1 class="column_header">HeaderContent HeaderContent</h1>
-    <p class="column_text">
-      A large amount of text about stuff that happens and things that do too.
-      Probably crap about computers or something and introduction to the page.
-    </p>
+    <h1 class="column_header top_header">Contact Me.</h1>
+    <br>
+    <br>
     <hr>
   </div>
   <hr>
   <div class="row">
     <div class="col-md-6 column_gradient all_column sub_column">
       <hr>
-      <h1 class="column_header">HeaderContent HeaderContent</h1>
+      <hr>
       <p class="column_text">
-        A large amount of text about stuff that happens and things that do too.
-        Probably crap about computers or something and introduction to the page.
-      </p>
+        The best way to get in touch with me is through email.
+        I will also attend to any messages on twitter as quickly
+        as I see them. You can follow me on instagram but I usually
+        post weird stuff instead of selfies like you are supposed to,
+        so consider yourself warned.
       <hr>
     </div>
     <div class="col-md-6 column_gradient all_column sub_column">
       <hr>
-      <h1 class="column_header">HeaderContent HeaderContent</h1>
-      <p class="column_text">
-        A large amount of text about stuff that happens and things that do too.
-        Probably crap about computers or something and introduction to the page.
-      </p>
+      <hr>
+      <h1 class="column_header">Places I look.</h1>
+      <ul class="column_text">
+        <li>Email     :<a class="social_link" href="mailto:colinwkingen@gmail.com"> colinwkingen@gmail.com</a></li>
+        <li>Twitter   :<a class="social_link" href="HTTP://www.twittter.com/ColinKingen"> @ColinKingen</a></li>
+        <li>Instagram :<a class="social_link" href="HTTPS://www.instagram.com/colinwkingen/"> @colinwkingen</li>
+      </ul>
+      <br>
       <hr>
     </div>
     <hr>
