--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Arbitrary Name's Web Portfolio</title>
+  <title>Home | Colin Kingen</title>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -49,6 +49,8 @@
       My goal is to use my skills as an coder, artist and problem solver make
       the web a better place.
     </p>
+    <br>
+    <br>
     <br>
     <hr>
   </div>
