Finish about page and create custom classes for resizing columns.

--- a/about.html
+++ b/about.html
@@ -32,36 +32,51 @@
 </nav>
 <hr>
 <div class="row">
-  <div class="col-md-12 top_column column_gradient all_column">
+  <div class="col-md-12 about_top column_gradient all_column">
     <hr>
-    <h1 class="column_header">HeaderContent HeaderContent</h1>
-    <p class="column_text">
-      A large amount of text about stuff that happens and things that do too.
-      Probably crap about computers or something and introduction to the page.
-    </p>
+    <h1 class="column_header short_top_header">Stuff about me. </h1>
+
     <hr>
   </div>
   <hr>
   <div class="row">
-    <div class="col-md-6 column_gradient all_column sub_column">
+    <div class="col-md-6 column_gradient all_column sub_column short_top_column">
       <hr>
-      <h1 class="column_header">HeaderContent HeaderContent</h1>
       <p class="column_text">
-        A large amount of text about stuff that happens and things that do too.
-        Probably crap about computers or something and introduction to the page.
+        I have lived my entire life in Portland Oregon, and if I ever leave I'll surely return.
+        Right now my wife Kara and I live on the North side, near St. Johns.
+        Besides coding and web work I love to cook, bike, read and experiment
+        with electronic music and abstract painting. I can sometimes be found in dingy old man bars,
+        parks with tall trees and restaurants that serve shellfish.
       </p>
       <hr>
-    </div>
-    <div class="col-md-6 column_gradient all_column sub_column">
-      <hr>
-      <h1 class="column_header">HeaderContent HeaderContent</h1>
       <p class="column_text">
-        A large amount of text about stuff that happens and things that do too.
-        Probably crap about computers or something and introduction to the page.
+        I have experience with:
       </p>
-      <hr>
+        <ul class="column_text">
+          <li>Python 3</li>
+          <li>HTML and CSS</li>
+          <li>Bootstrap 3</li>
+          <li>Javascript</li>
+        </ul>
+        <p class="column_text">
+        These are relatively new skills for me, but I am committed to learning more
+        about them every day and becoming a better coder and designer.
+        </p>
+        <br>
+        <br>
+        <br>
+        <hr>
+        <br>
+        <br>
     </div>
-    <hr>
+    <div class="col-md-6 column_gradient all_column sub_column short_top_column">
+      <hr>
+      <img class="img-responsive profile_pics center-block" src="img/upperleft.jpg"/>
+      <img class="img-responsive profile_pics center-block" src="img/upperright.jpg"/>
+      <img class="img-responsive profile_pics center-block" src="img/bottomleft.jpg"/>
+      <img class="img-responsive profile_pics center-block" src="img/bottomright.jpg"/>
+    </div>
   </div>
 
 </div>
