Add repository links and custom styling to projects page.

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <ul class="page_header">
       <li><span class="left ">.colin_kingen {</span></li>
-      <li><span class="left">web: design</span></li>
+      <li><span class="left">web: development-design;</span></li>
       <li><span class="left">}</span></li>
     </ul>
 
@@ -58,16 +58,14 @@
           <li>HTML and CSS</li>
           <li>Bootstrap 3</li>
           <li>Javascript</li>
+          <li>Git</li>
         </ul>
         <p class="column_text">
         These are relatively new skills for me, but I am committed to learning more
-        about them every day and becoming a better coder and designer.
+        about them every day and becoming a better coder and designer. I am currently enrolled at Epicodus,
+        a coding school for web developers to accelerate this process.
         </p>
-        <br>
-        <br>
-        <br>
         <hr>
-        <br>
         <br>
     </div>
     <div class="col-md-6 column_gradient all_column sub_column short_top_column">
