--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <ul class="page_header">
       <li><span class="left ">.colin_kingen {</span></li>
-      <li><span class="left">web: design</span></li>
+      <li><span class="left">web: development-design;</span></li>
       <li><span class="left">}</span></li>
     </ul>
 
@@ -57,9 +57,9 @@
       <hr>
       <h1 class="column_header">Places I look.</h1>
       <ul class="column_text">
-        <li>Email     :<a class="social_link" href="mailto:colinwkingen@gmail.com"> colinwkingen@gmail.com</a></li>
-        <li>Twitter   :<a class="social_link" href="HTTP://www.twittter.com/ColinKingen"> @ColinKingen</a></li>
-        <li>Instagram :<a class="social_link" href="HTTPS://www.instagram.com/colinwkingen/"> @colinwkingen</li>
+        <li class="social_link">Email     :<a class="social_link" href="mailto:colinwkingen@gmail.com">    colinwkingen@gmail.com</a></li>
+        <li class="social_link">Instagram :<a class="social_link" href="HTTPS://www.instagram.com/colinwkingen/"> @colinwkingen</a></li>
+        <li class="social_link">Twitter   :<a class="social_link" href="HTTP://www.twittter.com/ColinKingen">  @ColinKingen</a></li>
       </ul>
       <br>
       <hr>
