--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <ul class="page_header">
       <li><span class="left ">.colin_kingen {</span></li>
-      <li><span class="left">web: design</span></li>
+      <li><span class="left">web: development-design;</span></li>
       <li><span class="left">}</span></li>
     </ul>
 
@@ -34,31 +34,45 @@
 <div class="row">
   <div class="col-md-12 top_column column_gradient all_column">
     <hr>
-    <h1 class="column_header">HeaderContent HeaderContent</h1>
+    <h1 class="column_header short_top_header">Projects.</h1>
+    <br>
     <p class="column_text">
-      A large amount of text about stuff that happens and things that do too.
-      Probably crap about computers or something and introduction to the page.
+    This is what I've been up to.
     </p>
+    <br>
     <hr>
   </div>
   <hr>
   <div class="row">
     <div class="col-md-6 column_gradient all_column sub_column">
       <hr>
-      <h1 class="column_header">HeaderContent HeaderContent</h1>
       <p class="column_text">
-        A large amount of text about stuff that happens and things that do too.
-        Probably crap about computers or something and introduction to the page.
+       The curriculum at Epicodus has me consistantly adding projects and
+       practice to my Github account. The highlights of my successful projects
+       there and at home will appear on this page.
       </p>
       <hr>
     </div>
     <div class="col-md-6 column_gradient all_column sub_column">
       <hr>
-      <h1 class="column_header">HeaderContent HeaderContent</h1>
-      <p class="column_text">
-        A large amount of text about stuff that happens and things that do too.
-        Probably crap about computers or something and introduction to the page.
-      </p>
+      <ul class="column_text">
+        <li class="social_link">My main Github Index :<a class="social_link" href="https://github.com/colinwkingen"> github/colinwkingen</a></li>
+      <hr>
+        <span>Animal Shelter themed page used to experiment with media queries.</span>
+         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/animal_shelter/">/animal_shelter Github Source</a></li>
+        <br>
+        <span>Beyonce themed web page practicing utilization of spans and divs for effective styling.</span>
+         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/band/">/band Github Source</a></li>
+        <br>
+        <span>Cupcake shop themed web site to advance specificity and precision of custom style sheets.</span>
+         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/cupcake_shop/">/cupcake_shop Github Source</a></li>
+        <br>
+        <span>Wikipedia "Clone" site to increase precise use of CSS, selectors and Bootstrap 3 tools. </span>
+          <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/wiki_clone">/wiki_clone Github Source</a></li>
+        <br>
+        <span>Basic portfolio index page mock-up. Used to improve effective usage of box model properties. </span>
+          <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/work_portfolio">/work_portfolio Github Source</a></li>
+      </ul>
       <hr>
     </div>
     <hr>
