Fix sitewide style inconsistancies and add basic media queries.

--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,36 @@
        there and at home will appear on this page.
       </p>
       <hr>
+      <p class="column_text">
+        These projects are roughly in chronological order, newest to oldest.
+        As my education continues increasing complexity and quality of end product
+        should be noted. As my portfolio increases, some projects may be removed from this
+        list.
+      </p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <hr>
     </div>
     <div class="col-md-6 column_gradient all_column sub_column">
       <hr>
@@ -59,19 +89,24 @@
         <li class="social_link">My main Github Index :<a class="social_link" href="https://github.com/colinwkingen"> github/colinwkingen</a></li>
       <hr>
         <span>Animal Shelter themed page used to experiment with media queries.</span>
-         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/animal_shelter/">/animal_shelter Github Source</a></li>
+         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/animal_shelter/">/animal_shelter Github source.</a></li>
+         <li><a class="social_link" href="https://colinwkingen.github.io/animal_shelter/">/animal_shelter Github-pages viewable site.</a></li>
         <br>
         <span>Beyonce themed web page practicing utilization of spans and divs for effective styling.</span>
-         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/band/">/band Github Source</a></li>
+         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/band/">/band Github source.</a></li>
+         <li><a class="social_link" href="https://colinwkingen.github.io/band/">/band Github-pages viewable site.</a></li>
         <br>
         <span>Cupcake shop themed web site to advance specificity and precision of custom style sheets.</span>
-         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/cupcake_shop/">/cupcake_shop Github Source</a></li>
+         <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/cupcake_shop/">/cupcake_shop Github source.</a></li>
+         <li><a class="social_link" href="https://colinwkingen.github.io/cupcake_shop/">/cupcake_shop Github-pages viewable site.</a></li>
         <br>
         <span>Wikipedia "Clone" site to increase precise use of CSS, selectors and Bootstrap 3 tools. </span>
-          <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/wiki_clone">/wiki_clone Github Source</a></li>
+          <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/wiki_clone">/wiki_clone Github source.</a></li>
+          <li><a class="social_link" href="https://colinwkingen.github.io/wiki_clone/">/wiki_clone Github-pages viewable site.</a></li>
         <br>
         <span>Basic portfolio index page mock-up. Used to improve effective usage of box model properties. </span>
-          <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/work_portfolio">/work_portfolio Github Source</a></li>
+          <li class="social_link"><a class="social_link" href="https://github.com/colinwkingen/work_portfolio">/work_portfolio Github source.</a></li>
+          <li><a class="social_link" href="https://colinwkingen.github.io/work_portfolio/">/work_portfolio Github-pages viewable site.</a></li>
       </ul>
       <hr>
     </div>
