Made design responsive for some smaller screens using media queries.

--- a/projects.html
+++ b/projects.html
@@ -58,26 +58,26 @@
         should be noted. As my portfolio increases, some projects may be removed from this
         list.
       </p>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
+      <br class="hidden-xs">
       <br>
       <br>
       <br>
