--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       student in Portland Oregon.
     </h1>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br class="hidden-xs">
+    <br class="hidden-xs">
+    <br class="hidden-xs">
+    <br class="hidden-xs">
+    <br class="hidden-xs">
     <br>
     <p class="column_text">
       My goal is to use my skills as an coder, artist and problem solver make
