Fixed some mobile nav issues and sizing.

--- a/projects.html
+++ b/projects.html
@@ -15,17 +15,17 @@
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
-    <ul class="page_header">
-      <li><span class="left ">.colin_kingen {</span></li>
-      <li><span class="left">web: development-design;</span></li>
-      <li><span class="left">}</span></li>
+    <ul class="page_header hidden-xs">
+      <li class="hidden-xs"><span class="left ">.colin_kingen {</span></li>
+      <li class="hidden-xs"><span class="left">web: development-design;</span></li>
+      <li class="hidden-xs"><span class="left">}</span></li>
     </ul>
 
   <div class="container">
 
     <ul class="nav nav-tabs pull-right">
       <li class="tab_style"><a href="index.html">Home</a></li>
-      <li class="tab_style"><a href="about.html">About Me</a></li>
+      <li class="tab_style"><a href="about.html">About</a></li>
       <li class="tab_style active"><a href="projects.html">Projects</a></li>
       <li class="tab_style"><a href="contact.html">Contact</a></li>
     </ul>
