Correct indentation errors in HTML pages, remove unnecessary blank space, comments and fix jQuery/Bootstrap reference organization.

--- a/about.html
+++ b/about.html
@@ -1,78 +1,73 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>About | Colin Kingen</title>
-</head>
-<body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <ul class="page_header">
-      <li><span class="left ">.colin_kingen {</span></li>
-      <li><span class="left">web: development-design;</span></li>
-      <li><span class="left">}</span></li>
-    </ul>
-  <div class="container">
-    <ul class="nav nav-tabs pull-right">
-      <li class="tab_style"><a href="index.html">Home</a></li>
-      <li class="tab_style active"><a href="about.html">About Me</a></li>
-      <li class="tab_style"><a href="projects.html">Projects</a></li>
-      <li class="tab_style"><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-</nav>
-<hr>
-<div class="row">
-  <div class="col-md-12 about_top column_gradient all_column">
-    <hr>
-    <h1 class="column_header short_top_header">Stuff about me. </h1>
-    <hr>
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6 column_gradient all_column sub_column short_top_column">
-      <hr>
-      <p class="column_text">
-        I have lived my entire life in Portland Oregon, and if I ever leave I'll surely return.
-        Right now my wife Kara and I live on the North side, near St. Johns.
-        Besides coding and web work I love to cook, bike, read and experiment
-        with electronic music and abstract painting. I can sometimes be found in dingy old man bars,
-        parks with tall trees and restaurants that serve shellfish.
-      </p>
-      <hr>
-      <p class="column_text">
-        I have experience with:
-      </p>
-        <ul class="column_text">
-          <li>Python 3</li>
-          <li>HTML and CSS</li>
-          <li>Bootstrap 3</li>
-          <li>Javascript</li>
-          <li>Git</li>
+  <head>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>About | Colin Kingen</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <ul class="page_header">
+        <li><span class="left ">.colin_kingen {</span></li>
+        <li><span class="left">web: development-design;</span></li>
+        <li><span class="left">}</span></li>
+      </ul>
+      <div class="container">
+        <ul class="nav nav-tabs pull-right">
+          <li class="tab_style"><a href="index.html">Home</a></li>
+          <li class="tab_style active"><a href="about.html">About Me</a></li>
+          <li class="tab_style"><a href="projects.html">Projects</a></li>
+          <li class="tab_style"><a href="contact.html">Contact</a></li>
         </ul>
-        <p class="column_text">
-        These are relatively new skills for me, but I am committed to learning more
-        about them every day and becoming a better coder and designer. I am currently enrolled at Epicodus,
-        a coding school for web developers to accelerate this process.
-        </p>
+      </div>
+    </nav>
+    <hr>
+    <div class="row">
+      <div class="col-md-12 about_top column_gradient all_column">
         <hr>
-        <br>
-    </div>
-    <div class="col-md-6 column_gradient all_column sub_column short_top_column">
+        <h1 class="column_header short_top_header">Stuff about me. </h1>
+        <hr>
+      </div>
       <hr>
-      <img class="img-responsive profile_pics center-block" src="img/upperleft.jpg"/>
-      <img class="img-responsive profile_pics center-block" src="img/upperright.jpg"/>
-      <img class="img-responsive profile_pics center-block" src="img/bottomleft.jpg"/>
-      <img class="img-responsive profile_pics center-block" src="img/bottomright.jpg"/>
+      <div class="row">
+        <div class="col-xs-12 col-md-6 column_gradient all_column sub_column short_top_column">
+          <hr>
+          <p class="column_text">
+            I have lived my entire life in Portland Oregon, and if I ever leave I'll surely return.
+            Right now my wife Kara and I live on the North side, near St. Johns.
+            Besides coding and web work I love to cook, bike, read and experiment
+            with electronic music and abstract painting. I can sometimes be found in dingy old man bars,
+            parks with tall trees and restaurants that serve shellfish.
+          </p>
+          <hr>
+          <p class="column_text">
+            I have experience with:
+          </p>
+            <ul class="column_text">
+              <li>Python 3</li>
+              <li>HTML and CSS</li>
+              <li>Bootstrap 3</li>
+              <li>Javascript</li>
+              <li>Git Version Control</li>
+            </ul>
+            <p class="column_text">
+            These are relatively new skills for me, but I am committed to learning more
+            about them every day and becoming a better coder and designer. I am currently enrolled at Epicodus,
+            a coding school for web developers to accelerate this process.
+            </p>
+            <hr>
+            <br>
+        </div>
+        <div class="col-xs-12 col-md-6 column_gradient all_column sub_column short_top_column">
+          <hr>
+          <img class="img-responsive profile_pics center-block" src="img/upperleft.jpg"/>
+          <img class="img-responsive profile_pics center-block" src="img/upperright.jpg"/>
+          <img class="img-responsive profile_pics center-block" src="img/bottomleft.jpg"/>
+          <img class="img-responsive profile_pics center-block" src="img/bottomright.jpg"/>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-</body>
+  </body>
 </html>
